QRCode for entities

--- a/generators/entity-client/templates/angular/src/main/webapp/app/entities/detail/entity-management-detail.component.html.ejs
+++ b/generators/entity-client/templates/angular/src/main/webapp/app/entities/detail/entity-management-detail.component.html.ejs
@@ -96,6 +96,11 @@ _%>
     }
 }
 _%>
+            <dd>
+                <div>
+                    <qr-code [value]='/<%= entityUrl %>'></qr-code>
+                </div>
+            </dd>
             </dl>
 
             <button type="submit"
