--- a/generators/entity-client/templates/angular/src/main/webapp/app/entities/entity-management.module.ts.ejs
+++ b/generators/entity-client/templates/angular/src/main/webapp/app/entities/entity-management.module.ts.ejs
@@ -17,6 +17,7 @@
  limitations under the License.
 -%>
 import { NgModule } from '@angular/core';
+import { QRCodeModule } from 'angular2-qrcode';
 
 import { SharedModule } from 'app/shared/shared.module';
 import { <%= entityAngularName %>Component } from './list/<%= entityFileName %>.component';
@@ -30,7 +31,7 @@ import { <%= entityAngularName %>RoutingModule } from './route/<%= entityFileNam
 @NgModule({
     imports: [
         SharedModule,
-        <%= entityAngularName %>RoutingModule,
+        <%= entityAngularName %>RoutingModule,QRCodeModule
     ],
     declarations: [
         <%= entityAngularName %>Component,
