--- a/generators/entity-client/templates/angular/src/main/webapp/app/entities/detail/entity-management-detail.component.html.ejs
+++ b/generators/entity-client/templates/angular/src/main/webapp/app/entities/detail/entity-management-detail.component.html.ejs
@@ -96,13 +96,15 @@ _%>
     }
 }
 _%>
-            <dd>
-                <div>
-                    <qr-code [value]='/<%= entityUrl %>'></qr-code>
-                </div>
-            </dd>
+            
             </dl>
 
+
+            <dd>
+                <div>
+                    <qr-code [value]='{{"/<%= entityUrl %>/"+<%= entityInstance %>.<%= primaryKey.name %>+"/view"}}' [size]="150"></qr-code>
+                </div>
+            </dd>
             <button type="submit"
                     (click)="previousState()"
                     class="btn btn-info"
