--- a/generators/entity-client/templates/angular/src/main/webapp/app/entities/entity-management.module.ts.ejs
+++ b/generators/entity-client/templates/angular/src/main/webapp/app/entities/entity-management.module.ts.ejs
@@ -31,7 +31,8 @@ import { <%= entityAngularName %>RoutingModule } from './route/<%= entityFileNam
 @NgModule({
     imports: [
         SharedModule,
-        <%= entityAngularName %>RoutingModule,QRCodeModule
+        <%= entityAngularName %>RoutingModule,
+        QRCodeModule,
     ],
     declarations: [
         <%= entityAngularName %>Component,
